# pyHidOverI2C

./: README.md  pyproject.toml
examples/: ft260_i2c.py
hidoveri2c/: __init__.py  i2c_msg.py
